--- a/mtaanimart/authApp/templates/authApp/checkout.html
+++ b/mtaanimart/authApp/templates/authApp/checkout.html
@@ -2,9 +2,9 @@
 {% load static %}
 
 {% block content %}
-<div style="min-height:100vh; background: linear-gradient(135deg, #6a0dad, #28a745); padding-top:60px;">
 
-  <!-- Wider form card -->
+
+  <!-- form card styling -->
   <div
     style="max-width:650px; margin:0 auto; background-color:#f8f9fa; padding:25px; border-radius:20px; box-shadow:0 0 15px rgba(0,0,0,0.2);">
 
@@ -42,7 +42,7 @@
         </select>
       </div>
 
-      <!-- Fixed Pickup Info -->
+      <!-- Pickup Info -->
       <div style="margin-bottom:15px; text-align:center; color:#6a0dad;">
         <p>
           Your order will be ready for <strong>Pickup at Mtaani Mart Shop</strong><br>
