--- a/mtaanimart/authApp/templates/authApp/prompt_stk_push.html
+++ b/mtaanimart/authApp/templates/authApp/prompt_stk_push.html
@@ -22,7 +22,7 @@
       <div class="form-check">
         <input class="form-check-input" type="checkbox" id="disabledFieldsetCheck" disabled>
         <label class="form-check-label" for="disabledFieldsetCheck">
-          Can’t check this
+          Can't check this
         </label>
       </div>
     </div>
