--- a/mtaanimart/authApp/templates/authApp/login_form.html
+++ b/mtaanimart/authApp/templates/authApp/login_form.html
@@ -1,7 +1,8 @@
 {% extends 'main.html' %}
 {% block content %}
 
-<div style="min-height:100vh; background: linear-gradient(135deg, #6a0dad, #28a745); padding-top:100px;">
+         
+<div style="min-height:100vh; background:#eae8e8; ; padding-top:100px;">
 
   <!-- Login card -->
   <div style="max-width:400px; margin:0 auto; background-color:#f8f9fa; padding:30px; border-radius:20px; box-shadow:0 0 15px rgba(0,0,0,0.2);">
