--- a/mtaanimart/ProductApp/templates/ProductApp/home.html
+++ b/mtaanimart/ProductApp/templates/ProductApp/home.html
@@ -80,7 +80,7 @@
 
 <div class="hero-section">
     <h1>Welcome to Mtaani Mart</h1>
-    <h5>We make shopping simple, convenient, and secure — here's how:</h5>
+    <h5>Where make shopping simple, convenient, and secure — here's how:</h5>
     
     <!-- cards -->
     <div style="
