--- a/mtaanimart/authApp/templates/authApp/help.html
+++ b/mtaanimart/authApp/templates/authApp/help.html
@@ -85,7 +85,7 @@
   <h2>Help & Support</h2>
 
   <!-- Subtitle -->
-  <h3 class="subtitle">Are you stuck and need help? Mtaani Mart got you ✅</h3>
+  <h3 class="subtitle">Are you stuck and need help? Mtaani Mart got you.</h3>
 
   <!-- Help Cards -->
   <div class="info-card">
